# velarionbotdiscord

./: .env  Cargo.toml  package-lock.json  package.json  velarion-bot.js
src/: api.rs  block.rs  blockchain.rs  consensus.rs  crypto.rs  database.rs  main.rs  network.rs  p2p.rs  rpc.rs  state.rs  storage.rs  token.rs  transaction.rs  utils.rs
tests/: block_test.rs
