[package]
name = "velarion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
sled = "1.0.0-alpha.124"
bincode = "1.3"
rand = "0.8"
ed25519-dalek = "1.0.0"
